<resources>
    <string name="app_name">Stream Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="action_global_filter">Global Schedule</string>
    <string name="save_location">/Notification_File</string>
    <string name="filter_pass_id">notificationfilterid</string>
    <string name="about_header">About</string>
    <string name="about_content">The function of this app is to allow users to be alerted via Android notification of any time particular Twitch streamers go live. </string>
    <string name="instructions_header">Instructions</string>
    <string name="instructions_content">This app uses a collection of user defined \'rules\' to determine when it should
        create a notification. Each one of these rules must have the name of the channel you want to be notified of, and
        can optionally have a filter to match streams names. Each rule also has scheduling options to let you control
        what times or days you wish to be notified of twitch activity. You can also set global scheduling options by
        selecting \'Global schedule\' from the action bar.</string>
    <string name="ok_button">Okay</string>
</resources>
