<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView3" android:layout_gravity="center_horizontal">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Stream Notifier"
                    android:id="@+id/help_title" android:textSize="36sp" android:gravity="center_horizontal"/>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#ff111111"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_header"
                    android:id="@+id/textView8" android:textSize="24sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_content"
                    android:id="@+id/textView7" android:textSize="16sp" android:textIsSelectable="false"/>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#ff111111" android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/instructions_header"
                    android:id="@+id/instruction_header" android:textSize="24sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/instructions_content"
                    android:id="@+id/instructions_body" android:textSize="16sp" android:textIsSelectable="false"/>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#ff111111" android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_button"
                    android:id="@+id/ok_button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>